WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305356
[GStreamer] webrtc/video-vp8-videorange.html is flaky failing
https://bugs.webkit.org/show_bug.cgi?id=305356
Summary
[GStreamer] webrtc/video-vp8-videorange.html is flaky failing
Lauro Moura
Reported
2026-01-12 19:43:47 PST
webrtc/video-vp8-videorange.html diff: --- /sdk/webkit/layout-test-results/webrtc/video-vp8-videorange-expected.txt +++ /sdk/webkit/layout-test-results/webrtc/video-vp8-videorange-actual.txt @@ -2,5 +2,5 @@ PASS Setting video exchange -PASS Track is enabled, video should not be black +FAIL Track is enabled, video should not be black promise_test: Unhandled rejection with value: "checkVideoBlack timed out expecting false" This test was previously heavily flaky crashing until circa 3048XX@main. But since late December 2025, it's now text-failing much more consistently. For example, using `--depth=1000` in webkit-testhunter for more recent runs, we have the following distribution: WPE release: The bot wpe-release completed 300 runs on the interval [
304430@main-305430@main
] Frecuency of results for test: webrtc/video-vp8-videorange.html 54 times [18%] -> CRASH 8 times [2.7%] -> TEXT TIMEOUT 200 times [66.7%] -> TEXT 6 times [2%] -> TIMEOUT CRASH 6 times [2%] -> PASS 9 times [3%] -> TEXT CRASH 3 times [1%] -> TIMEOUT 6 times [2%] -> TIMEOUT TEXT 1 times [0.3%] -> TIMEOUT PASS 7 times [2.3%] -> TEXT PASS WPE debug: The bot wpe-debug completed 90 runs on the interval [
304432@main-305425@main
] Frecuency of results for test: webrtc/video-vp8-videorange.html 68 times [75.6%] -> TEXT 6 times [6.7%] -> CRASH 3 times [3.3%] -> TEXT CRASH 5 times [5.6%] -> PASS 3 times [3.3%] -> TEXT PASS 5 times [5.6%] -> TEXT TIMEOUT GTK-Release: The bot gtk-release completed 271 runs on the interval [
304431@main-305430@main
] Frecuency of results for test: webrtc/video-vp8-videorange.html 47 times [17.3%] -> CRASH 81 times [29.9%] -> PASS 1 times [0.4%] -> TIMEOUT CRASH 103 times [38.0%] -> TEXT 3 times [1.1%] -> TIMEOUT 13 times [4.8%] -> TEXT PASS 8 times [3.0%] -> TIMEOUT TEXT 14 times [5.2%] -> TEXT TIMEOUT 1 times [0.4%] -> TIMEOUT PASS GTK-Debug: The bot gtk-debug completed 75 runs on the interval [
304433@main-305425@main
] Frecuency of results for test: webrtc/video-vp8-videorange.html 15 times [20%] -> TEXT 7 times [9.3%] -> CRASH 30 times [40%] -> PASS 1 times [1.3%] -> TEXT CRASH 19 times [25.3%] -> TEXT PASS 3 times [4%] -> TEXT TIMEOUT
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2026-01-16 08:27:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56715
Philippe Normand
Comment 2
2026-01-17 03:24:41 PST
***
Bug 286859
has been marked as a duplicate of this bug. ***
EWS
Comment 3
2026-01-19 02:26:29 PST
Committed
305810@main
(12b0406851de): <
https://commits.webkit.org/305810@main
> Reviewed commits have been landed. Closing PR #56715 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2026-01-19 02:27:12 PST
<
rdar://problem/168438624
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug