[GStreamer] webrtc/video-vp8-videorange.html is flaky failing https://bugs.webkit.org/show_bug.cgi?id=305356

Reviewed by Xabier Rodriguez-Calvar.

The test was timing out sometimes, the vp8 decoder dropping frames it thought were too late. The
timestamps of the buffers passed to the encoder were actually incorrect. We now timestamp video
frames captured from the canvas in all cases.

* LayoutTests/platform/glib/TestExpectations:
* Source/WebCore/Modules/mediastream/CanvasCaptureMediaStreamTrack.cpp:
(WebCore::CanvasCaptureMediaStreamTrack::Source::captureCanvas):
* Source/WebCore/platform/graphics/gstreamer/VideoFrameGStreamer.cpp:
(WebCore::VideoFrameGStreamer::setPresentationTime):

Canonical link: https://commits.webkit.org/305810@main